[FIX] sap.m.SegmentedButton: Focus contrast ratio in IE/Edge is now correct
BCP: 1680343826
CR-Id: 012006153200000014312017

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize/SegmentedButton.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize/SegmentedButton.less
@@ -65,9 +65,14 @@ html.sap-desktop {
 	}
 }
 
-html[data-sap-ui-browser^="ie"].sap-desktop .sapMSegBBtnFocusable.sapMSegBBtnSel:focus,
-html[data-sap-ui-browser^="ed"].sap-desktop .sapMSegBBtnFocusable.sapMSegBBtnSel:focus {
-		outline-color: @sapUiContentFocusColor;
+/* IE/Edge */
+html[data-sap-ui-browser^="ie"].sap-desktop,
+html[data-sap-ui-browser^="ed"].sap-desktop {
+	.sapMSegB {
+		.sapMSegBBtnFocusable.sapMSegBBtnSel:focus:before {
+			border: 1px dashed @sapUiContentContrastFocusColor;
+		}
+	}
 }
 
 .sapMSegB.sapMSegBIcons {
